data/derived/comb/progs/unify/prog6440.ml.out
Characters 474-478:
  | Creative (e1) -> -1.0 *. eval(e1);;
                                 ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
